# araneus

./: .env.example  .gitignore  GEMINI.md  LICENSE  docker-compose.yml  pyproject.toml  requirements.txt
.gemini/: settings.json
.gemini/agents/: data-architect.md
.gemini/commands/git/: pr.toml
.gemini/skills/: dgouv-expert.md
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: calculate_vote_ratio.sql  clean_city_code.sql
dbt/models/marts/: fct_elections_municipales_2020_synthese.sql
dbt/models/staging/dgouv/: _sources.yml  stg_dgouv__elections_2020_t1.sql  stg_dgouv__elections_2020_t2.sql  stg_dgouv__rne_conseillers_municipaux.sql  stg_dgouv__rne_maires.sql
scripts/: tool_fetch_dgouv_data.py  tool_ingest_raw_data.py  tool_run_dbt.py
src/: dagster.yaml  workspace.yaml
src/.telemetry/: id.yaml
src/araneus/: definitions.py
src/araneus/assets/: dbt_assets.py  raw_data.py
src/araneus/resources/: __init__.py
